--- a/bloom/imgui.ini
+++ b/bloom/imgui.ini
@@ -1,26 +1,30 @@
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=2515,1136
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=451,451
+ViewportPos=60,60
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
-[Window][Window 1]
-Pos=-9,12
-Size=149,48
+[Window][Main]
+Pos=0,0
+Size=2515,1136
+Collapsed=0
+
+[Window][Main Window]
+Pos=8,30
+Size=2499,1098
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=3642,0
-Size=198,2066
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=3840,2066
+ViewportPos=2638,510
+ViewportId=0xE927CF2F
+Size=380,760
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,34 Size=3840,2066 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=200,400 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=198,400 Selected=0xE87781F4
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=741,639 Size=2515,1136 CentralNode=1
 
