added functioning minimize and fullscreen buttons to the main window

--- a/bloom/imgui.ini
+++ b/bloom/imgui.ini
@@ -1,30 +1,30 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=2515,1136
+Size=841,800
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=60,60
-ViewportId=0x9F5F46A1
+Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Main]
 Pos=0,0
-Size=2515,1136
+Size=841,800
 Collapsed=0
 
 [Window][Main Window]
 Pos=8,30
-Size=2499,1098
+Size=825,762
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2638,510
-ViewportId=0xE927CF2F
-Size=380,760
+Pos=8,30
+Size=384,762
 Collapsed=0
+DockId=0x00000001
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=741,639 Size=2515,1136 CentralNode=1
+DockNode  ID=0x00000001 Pos=1700,528 Size=384,762 Selected=0xE87781F4
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=1692,498 Size=841,800 CentralNode=1
 
