added a uuid system, a circular buffer, and began the oscilloscopes, which doesnt draw a proper line yet but does buffer the data properly

--- a/bloom/imgui.ini
+++ b/bloom/imgui.ini
@@ -34,6 +34,12 @@ Size=190,762
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Oscilloscope]
+ViewportPos=1770,711
+ViewportId=0x608FDEB4
+Size=729,537
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=959,732 Size=384,762 Split=X Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=192,762 Selected=0xE87781F4
